--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vite": "^5.4.10"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.9.3",
+    "lodash": "^4.17.21",
     "phaser": "^3.70.0"
   }
 }
